website/code/pidigits-gwydion.log
BUILD COMMANDS FOR: pidigits.gwydion

Fri Oct  7 22:09:18 PDT 2005

cp /opt/shootout/shootout/bench/pidigits/pidigits.gwydion pidigits.dylan
(if [ "pidigits" = "random" ]; then	\
    cp random.dylan randum.dylan;	\
fi)
/usr/bin/d2c -s  pidigits.dylan
Entering single file mode.
Compiling library pidigits
[Loading library Dylan...]
Using custom library import list...
[Loading library common-dylan...
  [Loading library melange-support...]
  [Loading library threads...]
  [Loading library table-extensions...]
  [Loading library Random...
   [Loading library transcendental...]]]
[Loading library io...In Define Library pidigits.:
unknown source locationWarning: Can't tell if argument <unknown-type> is a subtype of type-union(<false>, <type>),
so can't tell if method:
  type-for-file-stream{<object>, <unknown-type>, <object>}
is congruent to GF
  type-for-file-stream
]
Parsing pidigits.dylan
"pidigits.dylan", line 65, character 1 through line 67, character 18:
    define function safe? (z, n)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  through
    end function safe?;
    ^^^^^^^^^^^^^^^^^^
  Error: Syntax error in ``define function'' macro.  None of the main rules matched.
skipping rest of pidigits.dylan
Finalizing library.
Optimize called 0 times.
Compilation failed with 1 Warning and 1 Error
make[3]: [pidigits.gwydion_run] Error 1 (ignored)
(if [ "pidigits" = "random" ]; then	\
    mv randum pidigits.gwydion_run;		\
else				\
    mv pidigits pidigits.gwydion_run;			\
fi)
mv: cannot stat `pidigits': No such file or directory
make[3]: [pidigits.gwydion_run] Error 1 (ignored)
rm pidigits.[co]
rm: cannot remove `pidigits.[co]': No such file or directory
make[3]: [pidigits.gwydion_run] Error 1 (ignored)
rm -rf .libs
rm pidigits.dylan

=================================================================
COMMAND LINE (%A is single numeric argument):

pidigits.gwydion_run %A
Error, could not exec pidigits.gwydion_run 600 (No such file or directory)
PATH=/opt/shootout/shootout/bench/pidigits:/opt/shootout/shootout/bench/pidigits/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
